crates/weaver-editor-core/src/writer/snapshots/weaver_editor_core__writer__tests__blank_lines_in_paragraph.snap
---
source: crates/weaver-editor-core/src/writer/tests.rs
expression: output
---
html_segments:
  - "<p id=\"p-0-n0\" dir=\"ltr\">test<br />​​d\n</p>"
  - "<span id=\"p-1-n0\">​\n​</span><p id=\"p-1-n1\" dir=\"ltr\">tsdsd</p>"
paragraph_ranges:
  - byte_start: 0
    byte_end: 10
    char_start: 0
    char_end: 8
  - byte_start: 10
    byte_end: 17
    char_start: 8
    char_end: 15
offset_maps:
  - - byte_range: 0..0
      char_range: 0..0
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 0
    - byte_range: 0..4
      char_range: 0..4
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 4
    - byte_range: 4..5
      char_range: 4..5
      node_id: p-0-n0
      char_offset_in_node: 4
      utf16_len: 1
    - byte_range: 5..9
      char_range: 5..7
      node_id: p-0-n0
      char_offset_in_node: 5
      utf16_len: 2
    - byte_range: 9..10
      char_range: 7..8
      node_id: p-0-n0
      char_offset_in_node: 7
      utf16_len: 1
  - - byte_range: 10..11
      char_range: 8..9
      node_id: p-1-n0
      char_offset_in_node: 0
      utf16_len: 1
    - byte_range: 11..12
      char_range: 9..10
      node_id: p-1-n0
      char_offset_in_node: 1
      utf16_len: 2
    - byte_range: 12..12
      char_range: 10..10
      node_id: p-1-n1
      char_offset_in_node: 0
      utf16_len: 0
    - byte_range: 12..17
      char_range: 10..15
      node_id: p-1-n1
      char_offset_in_node: 0
      utf16_len: 5
