crates/weaver-editor-core/src/writer/snapshots/weaver_editor_core__writer__tests__blockquote_multiline.snap
---
source: crates/weaver-editor-core/src/writer/tests.rs
expression: output
---
html_segments:
  - "<blockquote><p id=\"p-0-n0\" dir=\"ltr\"><span class=\"md-syntax-block\" data-syn-id=\"s0\" data-char-start=\"0\" data-char-end=\"2\">&gt; </span>line one<br />​<span class=\"md-syntax-block\" data-syn-id=\"s1\" data-char-start=\"11\" data-char-end=\"13\">&gt; </span>line two</p>"
  - "</blockquote>"
paragraph_ranges:
  - byte_start: 0
    byte_end: 21
    char_start: 0
    char_end: 21
offset_maps:
  - - byte_range: 0..2
      char_range: 0..2
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 2
    - byte_range: 2..2
      char_range: 2..2
      node_id: p-0-n0
      char_offset_in_node: 2
      utf16_len: 0
    - byte_range: 2..10
      char_range: 2..10
      node_id: p-0-n0
      char_offset_in_node: 2
      utf16_len: 8
    - byte_range: 10..11
      char_range: 10..11
      node_id: p-0-n0
      char_offset_in_node: 10
      utf16_len: 1
    - byte_range: 11..13
      char_range: 11..13
      node_id: p-0-n0
      char_offset_in_node: 11
      utf16_len: 2
    - byte_range: 13..21
      char_range: 13..21
      node_id: p-0-n0
      char_offset_in_node: 13
      utf16_len: 8
