crates/weaver-editor-core/src/writer/snapshots/weaver_editor_core__writer__tests__blockquote_simple.snap
---
source: crates/weaver-editor-core/src/writer/tests.rs
expression: output
---
html_segments:
  - "<blockquote><p id=\"p-0-n0\" dir=\"ltr\"><span class=\"md-syntax-block\" data-syn-id=\"s0\" data-char-start=\"0\" data-char-end=\"2\">&gt; </span>quote</p>"
  - "</blockquote>"
paragraph_ranges:
  - byte_start: 0
    byte_end: 7
    char_start: 0
    char_end: 7
offset_maps:
  - - byte_range: 0..2
      char_range: 0..2
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 2
    - byte_range: 2..2
      char_range: 2..2
      node_id: p-0-n0
      char_offset_in_node: 2
      utf16_len: 0
    - byte_range: 2..7
      char_range: 2..7
      node_id: p-0-n0
      char_offset_in_node: 2
      utf16_len: 5
