crates/weaver-editor-core/src/writer/snapshots/weaver_editor_core__writer__tests__many_opening_brackets.snap
---
source: crates/weaver-editor-core/src/writer/tests.rs
expression: output
---
html_segments:
  - "<p id=\"p-0-n0\" dir=\"ltr\">[[[[[[[[[[<span class=\"md-syntax-inline\" data-syn-id=\"s0\" data-char-start=\"10\" data-char-end=\"12\">[[</span><a class=\"link\" href=\"z\">z</a><span class=\"md-syntax-inline\" data-syn-id=\"s1\" data-char-start=\"13\" data-char-end=\"15\" spellcheck=\"false\">]]</span><br />​]]]]</p>"
paragraph_ranges:
  - byte_start: 0
    byte_end: 20
    char_start: 0
    char_end: 20
offset_maps:
  - - byte_range: 0..0
      char_range: 0..0
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 0
    - byte_range: 0..1
      char_range: 0..1
      node_id: p-0-n0
      char_offset_in_node: 0
      utf16_len: 1
    - byte_range: 1..2
      char_range: 1..2
      node_id: p-0-n0
      char_offset_in_node: 1
      utf16_len: 1
    - byte_range: 2..3
      char_range: 2..3
      node_id: p-0-n0
      char_offset_in_node: 2
      utf16_len: 1
    - byte_range: 3..4
      char_range: 3..4
      node_id: p-0-n0
      char_offset_in_node: 3
      utf16_len: 1
    - byte_range: 4..5
      char_range: 4..5
      node_id: p-0-n0
      char_offset_in_node: 4
      utf16_len: 1
    - byte_range: 5..6
      char_range: 5..6
      node_id: p-0-n0
      char_offset_in_node: 5
      utf16_len: 1
    - byte_range: 6..7
      char_range: 6..7
      node_id: p-0-n0
      char_offset_in_node: 6
      utf16_len: 1
    - byte_range: 7..8
      char_range: 7..8
      node_id: p-0-n0
      char_offset_in_node: 7
      utf16_len: 1
    - byte_range: 8..9
      char_range: 8..9
      node_id: p-0-n0
      char_offset_in_node: 8
      utf16_len: 1
    - byte_range: 9..10
      char_range: 9..10
      node_id: p-0-n0
      char_offset_in_node: 9
      utf16_len: 1
    - byte_range: 10..12
      char_range: 10..12
      node_id: p-0-n0
      char_offset_in_node: 10
      utf16_len: 2
    - byte_range: 12..13
      char_range: 12..13
      node_id: p-0-n0
      char_offset_in_node: 12
      utf16_len: 1
    - byte_range: 13..15
      char_range: 13..15
      node_id: p-0-n0
      char_offset_in_node: 13
      utf16_len: 2
    - byte_range: 15..16
      char_range: 15..16
      node_id: p-0-n0
      char_offset_in_node: 15
      utf16_len: 1
    - byte_range: 16..17
      char_range: 16..17
      node_id: p-0-n0
      char_offset_in_node: 16
      utf16_len: 1
    - byte_range: 17..18
      char_range: 17..18
      node_id: p-0-n0
      char_offset_in_node: 17
      utf16_len: 1
    - byte_range: 18..19
      char_range: 18..19
      node_id: p-0-n0
      char_offset_in_node: 18
      utf16_len: 1
    - byte_range: 19..20
      char_range: 19..20
      node_id: p-0-n0
      char_offset_in_node: 19
      utf16_len: 1
  - []
